@@ -1,9 +1,11 @@
 package com.example.dorustree_corp.Service.Implementation;
 
+import com.example.dorustree_corp.Enums.UserRoles;
 import com.example.dorustree_corp.Model.MongoDb.UserData;
 import com.example.dorustree_corp.Repository.MongoDb.UserRepository;
 import org.jspecify.annotations.NonNull;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
@@ -11,6 +13,7 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Component;
 
 import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
 @Component
@@ -32,7 +35,7 @@ public class UserDataService implements UserDetailsService {
             throw new UsernameNotFoundException("User not found with email: " + userEmail);
 
         UserData userData = existingUser.get();
-        return new User(userData.getUserEmail(), userData.getUserPassword(), Collections.emptyList());//using empty collection list for now to solve the issue
+        return new User(userData.getUserEmail(), userData.getUserPassword(), List.of(new SimpleGrantedAuthority("ROLE_" + userData.getUserRole().name())));//using empty collection list for now to solve the issue
 
     }
 }
